--- a/analysis/juvenile_development.Rmd
+++ b/analysis/juvenile_development.Rmd
@@ -62,6 +62,11 @@ wing_length$LINE <- paste0(wing_length$Treatment, substr(wing_length$Rep, 2, 2))
 ## Inspecting the raw data
 
 ```{r, fig.height=4}
+cols <- c("M females" = "pink", 
+          "P females" = "red", 
+          "M males" = "skyblue", 
+          "P males" = "blue")
+
 eplot <- ecl.dat %>% 
   filter(EVENT == 1) %>% 
   ggplot(aes(x = DAY, y = SEX, fill = TRT)) +
@@ -97,7 +102,7 @@ survminer::ggsurvplot(survfit(Surv(DAY, EVENT) ~ TRT + SEX, data = ecl.dat),
                       conf.int = TRUE,
                       risk.table = FALSE,
                       linetype = "SEX",
-                      palette = c("#377EB8", "#377EB8", "#E41A1C", "#E41A1C"),
+                      palette = c("pink", "red", "skyblue", "blue"),
                       fun = "event",
                       xlim = c(12, 21),
                       xlab = "Days",
@@ -121,7 +126,7 @@ Next we need to check that the 'proportional hazards' assumption is not violated
 par(mar = c(2, 2, 2, 2))
 plot(survfit(Surv(DAY, EVENT) ~ TRT + SEX, data = ecl.dat), 
      lty = 1:2, 
-     col = c("#377EB8", "#377EB8", "#E41A1C", "#E41A1C"), 
+     col = c("pink", "red", "skyblue", "blue"), 
      fun = "cloglog")
 ```
 Here we plot the 'cloglog' of the observed hazards where crossing lines indicate hazards are not proportional. Looks good so we continue to fit the model. 
@@ -154,7 +159,7 @@ broom::tidy(anova(coxmod, coxmod_dropSEX)),
 broom::tidy(anova(coxmod, coxmod_dropINT))) %>% 
   cbind(Parameter = rep(c('Treatment', 'Sex', 'Treatment x Sex'), each = 2)) %>% 
   mutate(across(1:4, round, 3)) %>% 
-  na.omit() %>% as.tibble %>% 
+  na.omit() %>% as_tibble %>% 
   relocate(Parameter, logLik, statistic, df, p.value) %>% 
   kable() %>% 
   kable_styling() %>% 
@@ -164,22 +169,100 @@ broom::tidy(anova(coxmod, coxmod_dropINT))) %>%
 We see there is an effect of treatment and sex but not their interaction. We can calculate estimates and confidence intervals for the hazard ratio by taking the exponent of the coeffients ± 1.96 * sqrt(vcov(???)). Polyandrous flies have a reduced hazard compared to Monogamy flies, i.e. take longer to eclose (hazard ratio = `r round(exp(fixef(coxmod)[1]), 3)`, CI = `r round(exp(fixef(coxmod)[1] + c(-1.96, 1.96) * sqrt(vcov(coxmod))[1, 1]), 3)`). Males have a reduced hazard compared to females (hazard ratio = `r round(exp(fixef(coxmod)[2]), 3)`, CI = `r round(exp(fixef(coxmod)[2] + c(-1.96, 1.96) * sqrt(vcov(coxmod))[2, 2]), 3)`).
 
 
+## Fit the model in `brms`
+
+I found [this](https://bookdown.org/content/4857/god-spiked-the-integers.html) link useful for fitting the model. Other useful links for understanding [survival analyis]() and [hazard ratios](). 
+
+```{r}
+
+if(!file.exists("output/cox_brms.rds")){
+  
+  cox_brm <- brm(DAY | cens(1 - EVENT) ~ TRT * SEX + (1|LINE) + (1|SEED) + (1|ID),
+               iter = 5000, chains = 4, cores = 4,
+               control = list(max_treedepth = 20,
+                              adapt_delta = 0.999),
+               data = ecl.dat, family = cox())
+  
+  saveRDS(cox_brm, "output/cox_brms.rds")
+} else {
+  cox_brm <- readRDS('output/cox_brms.rds')
+}
+
+summary(cox_brm)
+
+#plot(cox_brm)
+
+fixef(cox_brm) %>% 
+  data.frame() %>% 
+  rownames_to_column()
+```
+
+## Posterior means of $\lambda$'s
+
+```{r}
+1 / exp(fixef(cox_brm)[, -2])
+```
+
+
+```{r}
+# wrangle
+f <-
+  fixef(cox_brm) %>% 
+  data.frame() %>% 
+  rownames_to_column() %>% 
+  mutate(param = str_remove(rowname, "m|P")) %>% 
+  tidyr::expand(nesting(Estimate, Q2.5, Q97.5, param),
+         days = 0:24) %>% 
+  mutate(m  = 1 - pexp(days, rate = 1 / exp(Estimate)),
+         ll = 1 - pexp(days, rate = 1 / exp(Q2.5)),
+         ul = 1 - pexp(days, rate = 1 / exp(Q97.5)))
+  
+# plot!
+f %>% 
+  ggplot(aes(x = days)) +
+#  geom_hline(yintercept = .5, linetype = 3, aes(color = param)) +
+  geom_ribbon(aes(ymin = ll, ymax = ul, fill = param),
+              alpha = 1/2) +
+ # geom_line(aes(y = m, aes(color = cols))) +
+  # scale_fill_manual(values = wes_palette("Moonrise2")[c(4, 1)], breaks = NULL) +
+  # scale_color_manual(values = wes_palette("Moonrise2")[c(4, 1)], breaks = NULL) +
+  # scale_y_continuous("proportion remaining", , breaks = c(0, .5, 1), limits = c(0, 1)) +
+  xlab("days to adoption") +
+  NULL
+
+f %>% 
+  ggplot(aes(x = days, y = m, colour = param)) +
+  geom_line() +
+  geom_ribbon(aes(ymin = ll, ymax = ul, fill = param), alpha = 1/2) +
+  scale_colour_manual(values = c("pink", "red", "skyblue", "blue")) +
+  scale_fill_manual(values = c("pink", "red", "skyblue", "blue")) +
+  theme_bw() +
+  theme() +
+  NULL
+
+```
+
 ## Fit a model for wing length
 
 We measured the length of wing vein IV for a subset of flies as a correlate of body size, which may influence development time. 
 
 ```{r, fig.height=4, fig.width=6}
-# wing_brms <- brm(Length ~ Treatment * Sex + (1|LINE) + (1|Seed),
-#                  data = wing_length,
-#   iter = 5000, chains = 4, cores = 4,
-#   prior = c(set_prior("normal(0,1)", class = "b"),
-#             set_prior("cauchy(0,1)", class = "sd")),
-#   control = list(max_treedepth = 20,
-#                  adapt_delta = 0.999)
-#   )
-#saveRDS(wing_brms, file = 'output/wing_brms.rds')
 
-wing_brms <- readRDS('output/wing_brms.rds')
+if(!file.exists("output/wing_brms.rds")){
+  
+  wing_brms <- brm(Length ~ Treatment * Sex + (1|LINE) + (1|Seed),
+                 data = wing_length,
+  iter = 5000, chains = 4, cores = 4,
+  prior = c(set_prior("normal(0,1)", class = "b"),
+            set_prior("cauchy(0,1)", class = "sd")),
+  control = list(max_treedepth = 20,
+                 adapt_delta = 0.999)
+  )
+  
+  saveRDS(wing_brms, "output/wing_brms.rds")
+} else {
+  wing_brms <- readRDS('output/wing_brms.rds')
+}
 
 pp_check(wing_brms)
 ```
@@ -227,12 +310,13 @@ fitbrms <- wing_length %>%
 
 fitbrms %>%
   mutate(Treatment = ifelse(Treatment == "M", "Monogamy", "Polyandry"),
-         Sex = ifelse(Sex == "F", "Female", "Male")) %>%
-  ggplot(aes(x = Sex, y = .value, colour = Treatment)) + 
+         Sex = ifelse(Sex == "F", "Female", "Male"),
+         var = paste(Treatment, Sex)) %>%
+  ggplot(aes(x = Sex, y = .value, colour = var)) + 
   geom_hline(yintercept = 0, linetype = 2) + 
   stat_pointinterval(position = position_dodge(0.4), 
                      fill = NA, .width = c(0.5, 0.95), alpha = 0.7) +
-  scale_colour_brewer(palette = 'Set1', direction = -1, name = "") +
+  scale_colour_manual(values = c("pink", "skyblue", "red", "blue"), name = "") +
   labs(y = 'Wing vein IV') +
   theme_bw() +
   theme(legend.position = 'top',
