--- a/analysis/metabolites.Rmd
+++ b/analysis/metabolites.Rmd
@@ -160,7 +160,7 @@ grid.arrange(
     geom_point(pch = 21, colour = "grey20") +
     facet_grid( ~ variable) +
     theme_bw() +
-    xlab("Dry weight (mg)") + ylab("Concentration") +
+    xlab("Dry weight") + ylab("Concentration") +
     theme(legend.position = 'none') + 
     scale_colour_manual(values = cols, name = "") + 
     scale_fill_manual(values = cols, name = ""),
@@ -434,8 +434,7 @@ Here, we use the model to predict the mean concentration of each metabolite (in 
 
 Because the model contains dry weight as a mediator variable, we created these predictions two different ways, and display the answer for both using tabs in the following figures/tables. Firstly, we predicted the means *controlling for differences in dry weight between sexes and treatments*; this was done by deriving the predictions dry weight set to its global mean, for both sexes and treatments. Secondly, we derived predictions without controlling for dry weight. This was done by deriving the predictions with dry weight set to its average value for the appropriate treatment-sex combination. 
 
-By clicking the tabs and comparing, one can see that the estimates of the treatment effect hardly change when differences in dry mass are controlled for. This indicates that dry mass does not have an important role in mediating the effect of treatment on metabolite composition, even though body size differs between treatments. Thus, we conclude that the M vs P treatment affected metabolite composition, via mechanisms other than by altering body mass. 
-
+By clicking the tabs and comparing, one can see that the estimates of the treatment effect hardly change when differences in dry weight are controlled for. This indicates that dry mass does not have an important role in mediating the effect of treatment on metabolite composition, even though body size differs between treatments. Thus, we conclude that the M vs P treatments caused metabolite composition to evolve, through mechanisms other than the evolution of dry weight. 
 
 ### Figure {.tabset}
 
